[package]
name = "ream-http-napi"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "NAPI bindings for the Ream Hyper HTTP server"

[lib]
crate-type = ["cdylib"]

[dependencies]
ream-http = { path = "../ream-http" }
ream-security = { path = "../ream-security" }
ream-napi-core = { path = "../ream-napi-core" }
napi = { version = "2", default-features = false, features = ["napi8", "serde-json", "async"] }
napi-derive = "2"
tokio = { version = "1", features = ["rt-multi-thread", "sync"] }
serde_json = "1"

[build-dependencies]
napi-build = "2"
