[package]
name = "ream-http"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Hyper HTTP server core for the Ream framework"

[lib]
crate-type = ["lib"]

[dependencies]
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros", "sync", "signal", "io-util"] }
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
