[package]
name = "ream-napi-test"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "NAPI roundtrip test crate for Ream — validates Rust→NAPI→TS→NAPI→Rust"

[lib]
crate-type = ["cdylib"]

[dependencies]
ream-napi-core = { path = "../ream-napi-core" }
napi = { version = "2", default-features = false, features = ["napi8", "serde-json"] }
napi-derive = "2"

[build-dependencies]
napi-build = "2"
