[package]
name = "ream-security"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Blackhole security layer for the Ream framework — XSS sanitization, CSRF, rate limiting"

[lib]
crate-type = ["lib"]

[dependencies]
ream-http = { path = "../ream-http" }
getrandom = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
